--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ padding-left: 8px;
   .image-container {
     position: relative;
     width: 100%;
+    z-index: -2;
   }
  .imgx {
   object-fit: cover;
@@ -125,11 +126,12 @@ padding-left: 8px;
     top: 10%;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 50;
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: auto;
   }
   
   .overlay-content {
@@ -280,7 +282,7 @@ text-align: center;
     justify-content: space-around;
     gap: 24px; /* Equivalent to space-x-6 */
     margin-top: 60px; /* mt-8 */
-    padding: 20px;
+   
   }
 
   /* Individual boxes */
@@ -294,6 +296,7 @@ text-align: center;
     font-size: 1.125rem; /* text-lg */
     font-weight: 500; /* font-medium */
     text-align: center;
+    padding: 20px;
   }
  
   .box-lime {
@@ -374,7 +377,7 @@ text-align: left;
     width: 20rem; /* w-48 */
     height: 20rem;
     position: relative; /* Ensure that the boxhover is positioned relative to the box */
-    padding: 20px;
+    padding: 20px 20px;
     border: 1px solid #1f2937;
     background-color: #1f2937; /* Background color for .box-lime */
     transition: opacity 0.3s; /* Smooth transition */
@@ -421,7 +424,7 @@ align-items:start;
   .box-gray {
     background-color: #1f2937; /* bg-gray-800 */
     color: white;
-    padding: 2px;
+    padding: 20px;
     font-family: Poppins;
 font-size: 32px;
 font-weight: 400;
@@ -660,7 +663,7 @@ text-align: left;
   /* Rounded corners */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow */
     transition: background-color 0.3s ease; /* Smooth transition */
-    height: 420px;
+    height: 520px;
     text-align: center;
     width:100%;
    
@@ -980,11 +983,7 @@ text-align: left;
   width: 6rem; /* w-16 */
   margin-bottom: 1rem; /* mb-4 */
 }
-.iconox img{
-  height: 6rem; /* h-16 */
-  width: 6rem; /* w-16 */
-  margin-bottom: 1rem;
-}
+
 
 /* Card title styling */
 .card-title {
@@ -992,16 +991,7 @@ text-align: left;
   font-weight: 200; /* font-semibold */
   color: black; /* Default text color for light cards */
 }
-.cardo h2 {
-  font-size: 10px;
-  color: #333;
-  margin: 15px 0;
-}
-.cardoo h2 {
-  font-size: 16px;
-  color: white;
-  margin: 15px 0;
-}
+
 .ontwthree{
 margin-top: 10px;
 }
@@ -1049,44 +1039,49 @@ nav {
 .dropdown {
   position: absolute;
   top: 120%;
-  left: -40%;
+  left: -140%;
   background-color: #464646;
-  width: 450px;
+  width: 700px;
   list-style: none;
   padding: 15px 0;
  gap: 80px;
   display: none;
   min-width: 300px;
-  z-index: -3;
+  z-index: 1000;
   border-radius: 10px;
+  font-family: Archivo;
+  font-size: 24px;
+  font-weight: 400;
+ 
+  text-align: left;
 }
  .submenu {
   position: absolute;
-  top: -110%;
+  top: -80%;
   left: 50%;
   background-color: white;
   color: #000000;
   list-style: none;
   padding: 10px 0;
   display: none;
-  min-width: 210px;
+  min-width: 300px;
   z-index: 1000;
-  height: 300px;
+  height: 600px;
   border-radius: 10px;
   border:2px solid #BECE00;
 }
 .submenux {
   position: absolute;
-  top: -8%;
+  top: 20%;
   left: 50%;
   background-color: white;
   color: #000000;
   list-style: none;
   padding: 10px 0;
   display: none;
-  min-width: 210px;
+  min-width: 300px;
   z-index: 1000;
-  height: 300px;
+  height: 600px;
   border-radius: 10px;
   border:2px solid #BECE00;
 }
@@ -1104,6 +1099,8 @@ nav {
   padding: 10px 20px;
   display: block;
   white-space: nowrap;
+ 
+
 }
 .submenu li {
   width: 100px;
@@ -1125,6 +1122,13 @@ nav {
   display: inline-block;
   inline-size: none;
   white-space: nowrap;
+  font-family: Archivo;
+font-size: 20px;
+font-weight: 400;
+line-height: 100px;
+text-align: left;
+
+  
   
 }
 .submenux li a {
@@ -1136,6 +1140,12 @@ nav {
   display: inline-block;
   inline-size: none;
   white-space: nowrap;
+  font-family: Archivo;
+font-size: 20px;
+font-weight: 400;
+line-height: 100px;
+text-align: left;
+
   
 }
 
