--- a/styles.css
+++ b/styles.css
@@ -1051,3 +1051,8 @@ form-section-unique {
       margin-left: 8rem;
   }
 }
+@media only screen and (max-width: 768px) {
+  .text-section-unique {
+      margin-left: 8rem;
+  }
+}
